welcome.lessons.welcome.variables.Variables.scala.code
var x:Int = 10
x=0
if (estSurBiscuit==false){
	avance() x=x+1
}else{
	while(x=0==false){
		recule()
	}
}
